# ChangeLog for app-misc/fslint
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Feb 2007; Jakub Moc <jakub@gentoo.org> +fslint-2.18.ebuild,
  +metadata.xml:
  Initial ebuild for Bug 33341
