@@ -1,4 +1,4 @@
 DIST fslint-2.18.tar.gz 71568 RMD160 607159bf48e5f8aa8284094e341cf687e4967738 SHA1 1b4604472478f7d2d1bc7d70a46877f96fa7b8d7 SHA256 296a1803ceffd1c51b5efbaf6c64341157f0b5d0fdac42003f9ae04bb2322533
-EBUILD fslint-2.18.ebuild 1265 RMD160 d9bbc92de7c0a4eba7ddf7bfc46ad7c6121f6507 SHA1 bfcc2a45d7207c4b1f954bbc198ee8697a9617e9 SHA256 ceda2cb010233c5673133c3a8b3ace4a52aba8028d42322805a05b2b7020b1d6
-MISC ChangeLog 230 RMD160 b5ace45bed874ee1f5ce1de595f8637e64c2a290 SHA1 1cf1714f316d52bfb94e0f693ff30cad1ca2c8f6 SHA256 5cdad406298a17ea55ae13a65c3b8932af31dd3e565b38b8c0b3287fb7a232f0
+EBUILD fslint-2.18.ebuild 1251 RMD160 dd628fecf9d25f825688b77de7276619c9a6ba82 SHA1 2f44e670488e6532d84355ae574449308c3a7db6 SHA256 47c82bdff5e2813aa4f600934c101ea039f159b1dcea7770d0c013f951449e4c
+MISC ChangeLog 402 RMD160 f5abdc75d9f02e268747d3b9eb5e2294a147377c SHA1 57812364e9b9d960ffd61f7d7ad468598e0d6576 SHA256 d3ff448b1d3018c6ffd11b934c35855694a284dd938311441fa654cd00f7990e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
